Fix news article/sidebar template bugs
Remove underline on h1 Search Results for. Link Article image on Index page. Change page order for Article page. Move thumbnail image below breadcrumbs for left and right sidebar block templates. Fix breadcrumb not showing accurately for different post types.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -945,7 +945,7 @@ h6 {
     font-family: 'Open Sans', Tahoma, sans-serif;
 }
 
-#content h1:first-of-type {
+#content h1:first-of-type:not(.entry-title) {
     display: inline-block;
     margin-bottom: 40px;
 
@@ -3163,4 +3163,11 @@ html.fa-events-icons-loading button.menu-toggle:after {
         border-radius: 10px;
         margin-right: 15px;
     }
+}
+
+/** Page Template Specific */
+body[class*=rightsidebar-new-blocks], body[class*=leftsidebar-new-blocks]{
+	.breadcrumbs {
+		margin-bottom: 30px !important;
+	}
 }
